resources/test-data/sample-gitops-repository/components/componentA/base/deployment-sample-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: component-a
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: component-a
  template:
    metadata:
      labels:
        app.kubernetes.io/name: component-a
    spec:
      containers:
      - name: component-a
        image: quay.io/jgwest-redhat/sample-workload:latest
        imagePullPolicy: Always
#        command:
#        - entrypoint.sh
        env:
          - name: ENV_VAR_FROM_CONFIG_MAP
            valueFrom:
              configMapKeyRef:
                name: environment-config-map
                key: environment-env-var
          - name: ANOTHER_ENV_VAR
            value: another-value

        ports:
        - containerPort: 8080
          protocol: TCP
