resources/test-data/sample-gitops-repository/components/componentA/base/service-sample-workload.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: component-a
  name: component-a
spec:
  ports:
  - name: server
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: component-a
